# OG3-Pack-Updater

./: Cargo.toml  build.rs  config.json
src/: main.rs
ui/: ui.slint
