[package]
name = "OG3-Pack-Updater"
version = "1.0.0"
edition = "2021"
authors = ["Interstellarfrog"]
license = "MIT"

[dependencies]
slint = { version = "1.11.0"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rfd = "0.15.3"
reqwest = { version = "0.12.15", features = ["blocking", "json"]}
zip = "2.6.1"

[build-dependencies]
slint-build = "1.10.0"