[package]
name = "OG3-Pack-Updater"
version = "1.0.0"
edition = "2021"
authors = ["Interstellarfrog","JMBROGB666 - NoNoNoNo666"]
license = "MIT"
build = "build.rs"

[dependencies]
slint = { version = "1.11.0"}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
rfd = "0.15.3"
reqwest = { version = "0.12.15", features = ["blocking", "json"]}
zip = "2.6.1"
open = "5.3.2"
winapi = {version = "0.3.9", features = ["winuser"]}
winres = "0.1.12"

[build-dependencies]
slint-build = "1.10.0"
winres = "0.1"